<resources>
    <string name="app_name">Fridge-it!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">My Fridge</string>
    <string name="button_insert">ADD AN ITEM</string>
    <string name="button_remove">REMOVE AN ITEM</string>
    <string name="logout_button">LOG OUT</string>

    <!-- Resources for InsertActivity -->
    <string name="foodName">Your Item</string>
    <string name="foodCategory">Food Category</string>
    <string name="foodExpiration">mm/dd/yyyy</string>
    <string name="foodOwner">Your Name</string>
    <string name="addNew">Add Item</string>
    <string name="formTitle">Food Entry Form</string>
    <string name="title_activity_insert">Food Entry Form</string>

    <!-- Resources for RemoveActivity -->
    <string name="title_activity_remove">Food Removal</string>
    <string name="button_remove_cancel">CANCEL</string>

    <!-- Resources for RemoveActivity -->
    <string name="remove_confirm">Removal Confirmation</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>

    <!-- Resources for ItemInfo activity -->
    <string name="item_info">Item Information</string>
    <string name="close">Close</string>

    <string-array name="food_categories">
        <item>Condiments</item>
        <item>Dairy</item>
        <item>Drinks</item>
        <item>Fruit</item>
        <item>Frozen Meals</item>
        <item>Grains</item>
        <item>Other</item>
        <item>Meals</item>
        <item>Meats</item>
        <item>Vegetables</item>
    </string-array>

    <string-array name="sort_categories">
        <item>A->Z</item>
        <item>Category</item>
        <item>Expiration Date</item>
        <item>Owner</item>
    </string-array>

    <!-- Resources for NewUserActivity -->
    <string name="newUserTitle">New User Form</string>
    <string name="newUserName">Name</string>
    <string name="newUserEmail">Email</string>
    <string name="newUserPassword">Password</string>
    <string name="newUserCreate">Create</string>
    <string name="title_activity_new_user">New User Form</string>

    <!-- Resources for LoginActivity -->
    <string name="loginTitle">User Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginLogin">Login</string>
    <string name="title_activity_login">User Login</string>
    <string name="title_activity_item_info">ItemInfo</string>
    <string name="title_activity_remove_confirm">removeConfirmActivity</string>
</resources>
