<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mowolfvillageon.fridgev1.InsertActivity"
    tools:showIn="@layout/activity_insert">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout">
        android:weightSum="1">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formTitle"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/foodName"
            android:ems="10"
            android:id="@+id/EditTextFoodName" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/foodCategory"
            android:ems="10"
            android:id="@+id/EditTextFoodCategory" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/foodOwner"
            android:ems="10"
            android:id="@+id/EditTextFoodOwner" />
        <Button
            android:id="@+id/AddItem"
            android:layout_height="wrap_content"
            android:text="@string/addNew"
            android:onClick="insert"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</RelativeLayout>
