<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#242b3e"
    android:textColor="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mowolfvillageon.fridgev1.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout">
        android:weightSum="1">

        <TextView
            android:id="@+id/TextViewLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:textSize="12pt"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="#FFFFFF">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Email"
            android:id="@+id/textView"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="#14a38d" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/loginEmail"
            android:ems="10"
            android:id="@+id/EditTextLoginEmail"
<<<<<<< HEAD
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Password"
            android:id="@+id/textView5"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="#14a38d" />

=======
            android:textColor="#FFFFFF"
            android:textColorHint="#808080"/>
>>>>>>> origin/master
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/loginPassword"
            android:ems="10"
            android:id="@+id/EditTextLoginPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#808080"/>
        <Button
            android:id="@+id/Login"
            android:layout_height="wrap_content"
            android:text="@string/loginLogin"
            android:onClick="login"
            android:background="#14a38d"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:fontFamily="sans-serif-thin"
            android:layout_width="fill_parent"
            android:layout_marginTop="250dp">
        </Button>
    </LinearLayout>
</RelativeLayout>
