<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#242b3e"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mowolfvillageon.fridgev1.removeConfirmActivity"
    tools:showIn="@layout/activity_remove_confirm"
    android:gravity="left">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:gravity="left"
        android:layout_above="@+id/AddItem">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_confirm"
            android:textSize="12pt"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:gravity="left">
        </TextView>

        <TextView
            android:id="@+id/confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:layout_gravity="start">
        </TextView>

    </LinearLayout>

    <Button
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="@string/button_yes"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:contextClickable="true"
        android:fontFamily="sans-serif-thin"
        android:focusable="false"
        android:textAlignment="center"
        android:onClick="onRemoveYesClick"
        android:id="@+id/buttonYes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="@string/button_no"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape2"
        android:contextClickable="true"
        android:fontFamily="sans-serif-thin"
        android:focusable="false"
        android:textAlignment="center"
        android:onClick="onRemoveNoClick"
        android:id="@+id/buttonNo"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonYes"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
