<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#212A34"
    android:textColor="#FFFFFF"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mowolfvillageon.fridgev1.Main2Activity"
    tools:showIn="@layout/activity_main2">

<!--android:background="#242b3e"-->

    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/logout_button"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:background="#144376"
        android:contextClickable="true"
        android:fontFamily="sans-serif-thin"
        android:focusable="false"
        android:textAlignment="center"
        android:onClick="onLogOutButtonClick"
        android:layout_alignRight="@+id/listViewFridge"
        android:layout_alignEnd="@+id/listViewFridge"
        android:id="@+id/button2"
        android:layout_alignParentTop="true" />



    <ListView
        android:textColor="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listViewFridge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_above="@+id/button"
        android:layout_below="@+id/searchView"
        android:paddingTop="35dp" />

    <Button
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="@string/button_insert"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:contextClickable="true"
        android:fontFamily="sans-serif-thin"
        android:focusable="false"
        android:textAlignment="center"
        android:onClick="onAddItemButtonClick"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="@string/button_remove"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape2"
        android:contextClickable="true"
        android:fontFamily="sans-serif-thin"
        android:focusable="false"
        android:textAlignment="center"
        android:onClick="onRemoveItemButtonClick"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button2" />

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:queryHint="Search..."
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#144376"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sortSpinner"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignTop="@+id/listViewFridge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sort By:   "
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:gravity="end"
        android:layout_alignTop="@+id/listViewFridge"
        android:paddingTop="15dp"
        android:textColor="#14a38d"
        android:layout_alignBottom="@+id/sortSpinner"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />


</RelativeLayout>
